zetasql/compliance/testdata/analytic_rank.test
[load_proto_files=zetasql/testdata/test_schema.proto]
[load_enum_names=zetasql_test__.TestEnum]
[prepare_database]
CREATE TABLE TestTable AS
SELECT cast(1 as int64) as row_id,
       cast(null as bool) as bool_val,
       cast(null as int64) as int64_val,
       cast(null as int32) as int32_val,
       cast(null as string) as str_val UNION ALL
  SELECT 2,  true,  null, null,  null  UNION ALL
  SELECT 3,  false, 1,    1,     "A"   UNION ALL
  SELECT 4,  true,  1,    2,     "A"   UNION ALL
  SELECT 5,  false, 1,    3,     "aA"   UNION ALL
  SELECT 6,  true,  2,    2,     "Aa"   UNION ALL
  SELECT 7,  false, 1,    1,     'a'   UNION ALL
  SELECT 8,  true,  2,    1,     "a"   UNION ALL
  SELECT 9,  false, 2,    3,     "b"   UNION ALL
  SELECT 10, true,  2,    1,     "B"
--
ARRAY<STRUCT<row_id INT64,
             bool_val BOOL,
             int64_val INT64,
             int32_val INT32,
             str_val STRING>>
[
  {1, NULL, NULL, NULL, NULL},
  {2, true, NULL, NULL, NULL},
  {3, false, 1, 1, "A"},
  {4, true, 1, 2, "A"},
  {5, false, 1, 3, "aA"},
  {6, true, 2, 2, "Aa"},
  {7, false, 1, 1, "a"},
  {8, true, 2, 1, "a"},
  {9, false, 2, 3, "b"},
  {10, true, 2, 1, "B"}
]
==

[prepare_database]
CREATE TABLE TableDateTimeBytes AS
SELECT cast(1 as int64) as row_id,
       cast(null as date) as date_val,
       cast(null as timestamp) as timestamp_val,
       cast(null as bytes) as bytes_val UNION ALL
SELECT 2,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 3,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 4,
       cast('2015-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 5,
       cast('2015-01-01' as date),
       TIMESTAMP '2013-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 6,
       cast('2014-01-01' as date),
       TIMESTAMP '2015-01-01 00:00:01.011011 UTC',
       cast("5" as bytes)
--
ARRAY<STRUCT<
        row_id INT64,
        date_val DATE,
        timestamp_val TIMESTAMP,
        bytes_val BYTES
      >>
[{1, NULL, NULL, NULL},
 {
   2,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   3,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   4,
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   5,
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   6,
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   b"5"
 }]
==

[default required_features=ANALYTIC_FUNCTIONS]
[name=rank_int64]
SELECT bool_val, int64_val,
       RANK() OVER (PARTITION BY bool_val ORDER BY int64_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {false, 1, 1},
  {false, 1, 1},
  {false, 1, 1},
  {false, 2, 4},
  {true, NULL, 1},
  {true, 1, 2},
  {true, 2, 3},
  {true, 2, 3},
  {true, 2, 3}
]
==

[name=rank_bool]
SELECT bool_val, RANK() OVER (ORDER BY bool_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, INT64>>[
  {NULL, 1},
  {false, 2},
  {false, 2},
  {false, 2},
  {false, 2},
  {true, 6},
  {true, 6},
  {true, 6},
  {true, 6},
  {true, 6}
]
==

[name=rank_str_int64]
SELECT str_val, int64_val,
       RANK() OVER (ORDER BY str_val, int64_val DESC)
FROM TestTable
--
ARRAY<STRUCT<str_val STRING, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {"A", 1, 3},
  {"A", 1, 3},
  {"Aa", 2, 5},
  {"B", 2, 6},
  {"a", 2, 7},
  {"a", 1, 8},
  {"aA", 1, 9},
  {"b", 2, 10}
]
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=rank_collate]
SELECT str_val, int64_val,
       RANK() OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
FROM TestTable
ORDER BY str_val COLLATE "en_US"
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ARRAY<STRUCT<str_val STRING, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {"a", 1, 4},
  {"a", 2, 3},
  {"A", 1, 5},
  {"A", 1, 5},
  {"aA", 1, 7},
  {"Aa", 2, 8},
  {"b", 2, 9},
  {"B", 2, 10}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 2:38]
       RANK() OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
                                     ^
==

[name=rank_int32_uint64]
SELECT int32_val, cast(int64_val as uint64),
       RANK() OVER (ORDER BY int32_val, cast(int64_val as uint64) ASC)
FROM TestTable
--
ARRAY<STRUCT<int32_val INT32, UINT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {1, 1, 3},
  {1, 1, 3},
  {1, 2, 5},
  {1, 2, 5},
  {2, 1, 7},
  {2, 2, 8},
  {3, 1, 9},
  {3, 2, 10}
]
==

[name=rank_uint32_int64]
SELECT cast(int32_val as uint32), int64_val,
       RANK() OVER (ORDER BY cast(int32_val as uint32), int64_val)
FROM TestTable
--
ARRAY<STRUCT<UINT32, int64_val INT64, INT64>>[
  {NULL, NULL, 1},
  {NULL, NULL, 1},
  {1, 1, 3},
  {1, 1, 3},
  {1, 2, 5},
  {1, 2, 5},
  {2, 1, 7},
  {2, 2, 8},
  {3, 1, 9},
  {3, 2, 10}
]
==

[name=rank_double]
SELECT double_val, RANK() OVER (ORDER BY double_val)
FROM unnest([CAST(0 AS DOUBLE), CAST(1 AS DOUBLE), CAST(null AS DOUBLE),
             CAST(null AS DOUBLE), CAST("NaN" AS DOUBLE),
             CAST("inf" AS DOUBLE), CAST("inf" AS DOUBLE),
             CAST("NaN" AS DOUBLE), CAST("-inf" AS DOUBLE),
             CAST("-inf" AS DOUBLE)]) as double_val
--
ARRAY<STRUCT<double_val DOUBLE, INT64>>[
  {NULL, 1},
  {NULL, 1},
  {nan, 3},
  {nan, 3},
  {-inf, 5},
  {-inf, 5},
  {0, 7},
  {1, 8},
  {inf, 9},
  {inf, 9}
]
==

[name=rank_float]
SELECT float_val, RANK() OVER (ORDER BY float_val)
FROM unnest([CAST(0 AS FLOAT), CAST(1 AS FLOAT), CAST(null AS FLOAT),
             CAST(null AS FLOAT), CAST("NaN" AS FLOAT),
             CAST("inf" AS FLOAT), CAST("inf" AS FLOAT),
             CAST("NaN" AS FLOAT), CAST("-inf" AS FLOAT),
             CAST("-inf" AS FLOAT)]) as float_val
--
ARRAY<STRUCT<float_val FLOAT, INT64>>[
  {NULL, 1},
  {NULL, 1},
  {nan, 3},
  {nan, 3},
  {-inf, 5},
  {-inf, 5},
  {0, 7},
  {1, 8},
  {inf, 9},
  {inf, 9}
]
==

[name=rank_date_timestamp]
SELECT date_val, timestamp_val,
       RANK() OVER (ORDER BY date_val, timestamp_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<
        date_val DATE,
        timestamp_val TIMESTAMP,
        INT64
      >>
[{NULL, NULL, 1},
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   2
 },
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   2
 },
 {
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   4
 },
 {
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   5
 },
 {
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   6
 }]
==

[name=rank_bytes]
SELECT bytes_val,
       RANK() OVER (ORDER BY bytes_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<bytes_val BYTES, INT64>>[
  {NULL, 1},
  {b"1", 2},
  {b"1", 2},
  {b"2", 4},
  {b"2", 4},
  {b"5", 6}
]
==

[name=rank_enum]
SELECT enum_val, RANK() OVER (ORDER BY enum_val DESC)
FROM unnest([CAST(0 AS `zetasql_test__.TestEnum`),
             CAST(1 AS `zetasql_test__.TestEnum`),
             CAST(1 AS `zetasql_test__.TestEnum`),
             CAST(2 AS `zetasql_test__.TestEnum`),
             CAST(2 AS `zetasql_test__.TestEnum`),
             CAST(null AS `zetasql_test__.TestEnum`),
             CAST(null AS `zetasql_test__.TestEnum`)]) as enum_val
--
ARRAY<STRUCT<
        enum_val ENUM<zetasql_test__.TestEnum>,
        INT64
      >>
[{TESTENUM2, 1},
 {TESTENUM2, 1},
 {TESTENUM1, 3},
 {TESTENUM1, 3},
 {TESTENUM0, 5},
 {NULL, 6},
 {NULL, 6}]
==

[name=rank_no_orderby]
SELECT RANK() OVER ()
FROM TestTable
--
ERROR: generic::invalid_argument: Window ORDER BY is required for analytic function rank [at 1:20]
SELECT RANK() OVER ()
                   ^
==

[name=rank_window]
SELECT row_id, RANK() OVER (ORDER BY bool_val ROWS 2 PRECEDING)
FROM TestTable
--
ERROR: generic::invalid_argument: Window framing clause is not allowed for analytic function rank [at 1:47]
SELECT row_id, RANK() OVER (ORDER BY bool_val ROWS 2 PRECEDING)
                                              ^
